--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,14 +1,18 @@
 .card {
-    gap: 8px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+  gap: 8px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.card__title {
+  text-align: center;
 }
 
 .card__meta {
-    gap: 0 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  gap: 0 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
