--- a/src/components/burger-constructor/BurgerConstructor.css
+++ b/src/components/burger-constructor/BurgerConstructor.css
@@ -1,30 +1,33 @@
-.burger-constructor {
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.burger-constructor__title {
-    margin: 0 0 24px;
-}
-
 .burger-constructor__wrapper {
-    flex-grow: 1;
-    overflow: auto;
-    position: relative;
-    margin: 0 -13px 0 0;
+  gap: 16px 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin: 0 0 40px;
+}
+
+.burger-constructor__main {
+  max-height: 464px;
+  margin: 0 -13px 0 0;
+  overflow: auto;
+  position: relative;
 }
 
 .burger-constructor__container {
-    position: absolute;
-    top: 0;
-    left: 0;
+  gap: 16px 0;
+  display: flex;
+  flex-direction: column;
 }
 
-.burger-constructor__list {
-    padding: 0 16px;
-    margin: 0 0 40px;
-    display: grid;
-    gap: 32px 24px;
-    grid-template-columns: repeat(2,1fr);
+.burger-constructor__footer {
+  gap: 0 40px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.burger-constructor__meta {
+  gap: 0 8px;
+  display: flex;
+  align-items: center;
 }
