--- a/src/components/burger-ingredients/BurgerIngredients.css
+++ b/src/components/burger-ingredients/BurgerIngredients.css
@@ -1,38 +1,35 @@
-.burger-constructor__tablist {
-    display: flex;
-    margin: 0 0 40px;
+.burger-ingredients {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.burger-ingredients__tablist {
+  display: flex;
+  margin: 0 0 40px;
+}
+
+.burger-ingredients__title {
+  margin: 0 0 24px;
 }
 
 .burger-ingredients__wrapper {
-    gap: 16px 0;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    margin: 0 0 40px;
-}
-
-.burger-ingredients__main {
-    max-height: 464px;
-    margin: 0 -13px 0 0;
-    overflow: auto;
-    position: relative;
+  flex-grow: 1;
+  overflow: auto;
+  position: relative;
+  margin: 0 -13px 0 0;
 }
 
 .burger-ingredients__container {
-    gap: 16px 0;
-    display: flex;
-    flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.burger-ingredients__footer {
-    gap: 0 40px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.burger-ingredients__meta {
-    gap: 0 8px;
-    display: flex;
-    align-items: center;
+.burger-ingredients__list {
+  padding: 0 16px;
+  margin: 0 0 40px;
+  display: grid;
+  gap: 32px 24px;
+  grid-template-columns: repeat(2, 1fr);
 }
