--- a/src/components/app-header/AppHeader.css
+++ b/src/components/app-header/AppHeader.css
@@ -1,13 +1,13 @@
 .header {
-    margin: 0 0 40px;
-    background-color: #1C1C21;
+  margin: 0 0 40px;
+  background-color: #1c1c21;
 }
 
 .header__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
