--- a/src/components/wrapper/Wrapper.css
+++ b/src/components/wrapper/Wrapper.css
@@ -1,25 +1,25 @@
 .main {
-    flex-grow: 1;
-    width: 100%;
-    max-width: 1280px;
-    padding: 0 0 40px;
-    margin-left: auto;
-    margin-right: auto;
+  flex-grow: 1;
+  width: 100%;
+  max-width: 1280px;
+  padding: 0 0 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main__title {
-    margin: 0 0 20px;
+  margin: 0 0 20px;
 }
 
 .main__content {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .main__wrapper {
-    flex-grow: 1;
-    display: grid;
-    grid-column-gap: 40px;
-    grid-template-columns: repeat(2,1fr);
+  flex-grow: 1;
+  display: grid;
+  grid-column-gap: 40px;
+  grid-template-columns: repeat(2, 1fr);
 }
