--- a/src/components/app-header/AppHeader.module.css
+++ b/src/components/app-header/AppHeader.module.css
@@ -1,9 +1,8 @@
-.header {
-  margin: 0 0 40px;
+.wrapper {
   background-color: #1c1c21;
 }
 
-.header__container {
+.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
