--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -1,32 +1,31 @@
-.burger-constructor__wrapper {
+.wrapper {
   gap: 16px 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  margin: 0 0 40px;
 }
 
-.burger-constructor__main {
+.section {
   max-height: 464px;
   margin: 0 -13px 0 0;
   overflow: auto;
   position: relative;
 }
 
-.burger-constructor__container {
+.container {
   gap: 16px 0;
   display: flex;
   flex-direction: column;
 }
 
-.burger-constructor__footer {
+.footer {
   gap: 0 40px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
-.burger-constructor__meta {
+.meta {
   gap: 0 8px;
   display: flex;
   align-items: center;
