--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,4 +1,4 @@
-.card {
+.item {
   gap: 8px 0;
   display: flex;
   flex-direction: column;
@@ -7,11 +7,11 @@
   cursor: pointer;
 }
 
-.card__title {
+.title {
   text-align: center;
 }
 
-.card__meta {
+.meta {
   gap: 0 8px;
   display: flex;
   align-items: center;
