--- a/src/components/ingredient-details/IngredientDetails.module.css
+++ b/src/components/ingredient-details/IngredientDetails.module.css
@@ -1,25 +1,25 @@
-.card-details {
+.wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.card-details__title {
+.title {
   line-height: 1.8;
   align-self: flex-start;
 }
 
-.card-details__subtitle {
+.subtitle {
   text-align: center;
 }
 
-.card-details__row {
+.row {
   display: grid;
   gap: 0 20px;
   grid-template-columns: repeat(4,1fr);
 }
 
-.card-details__info {
+.info {
   display: flex;
   flex-direction: column;
   align-items: center;
