--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,7 +1,6 @@
-.modal {
+.wrapper {
   width: 100%;
   max-width: 720px;
-  padding: 40px;
   position: relative;
   border-radius: 40px;
   box-sizing: border-box;
@@ -10,7 +9,7 @@
     0 16px 24px 0 rgba(0, 0, 0, 0.04), 0 24px 32px 0 rgba(0, 0, 0, 0.04);
 }
 
-.modal__close {
+.close {
   border: 0;
   padding: 0;
   position: absolute;
