--- a/src/components/order-details/OrderDetails.module.css
+++ b/src/components/order-details/OrderDetails.module.css
@@ -1,4 +1,4 @@
-.order-details {
+.wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -6,6 +6,6 @@
   text-align: center;
 }
 
-.order-details__id {
+.id {
   text-shadow: 0 4px 32px rgba(51, 51, 255, .50), 0 0 8px rgba(51, 51, 255, .25), 0 0 16px rgba(51, 51, 255, .25);
 }
