--- a/src/components/preloader/Preloader.module.css
+++ b/src/components/preloader/Preloader.module.css
@@ -42,7 +42,7 @@
   }
 }
 
-.preloader {
+.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,13 +53,13 @@
   box-sizing: border-box;
 }
 
-.preloader__container {
+.container {
   width: 100px;
   height: 100px;
   position: relative;
 }
 
-.preloader__round {
+.round {
   width: 100px;
   height: 100px;
   position: absolute;
@@ -69,8 +69,8 @@
   border-radius: 50px;
 }
 
-.preloader__round::after,
-.preloader__round::before {
+.round::after,
+.round::before {
   content: '';
   width: 100px;
   height: 100px;
@@ -80,12 +80,12 @@
   border-radius: 50px;
 }
 
-.preloader__round::after {
+.round::after {
   background: white;
   animation: preloader-inside-white 1s ease-in-out infinite;
 }
 
-.preloader__round::before {
+.round::before {
   z-index: 10;
   background: #4C4CFF;
   animation: preloader-inside-red 1s ease-in-out infinite;
