--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -5,6 +5,23 @@
   align-items: center;
   position: relative;
   cursor: pointer;
+  transition: all .3s ease;
+}
+
+.item:before {
+  content: '';
+  opacity: 0;
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  bottom: -4px;
+  right: -4px;
+  box-shadow: 0 0 0 8px #4C4CFF;
+  transition: all .3s ease;
+}
+
+.item_dragged:before {
+  opacity: .8;
 }
 
 .title {
