настроить перетаскивание элементов в списке заказа

--- a/src/components/ingredient/Ingredient.module.css
+++ b/src/components/ingredient/Ingredient.module.css
@@ -5,3 +5,13 @@
   align-items: center;
   justify-content: flex-end;
 }
+
+.active {
+  transition: all .3s ease;
+  background-color: rgba(0,0,0,0);
+}
+
+.hover {
+  transition: all .3s ease;
+  background-color: rgba(0,0,0,.5);
+}
