--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -18,3 +18,11 @@
 .title {
   text-align: center;
 }
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 16px 0;
+}
