--- a/src/components/wrapper/Wrapper.module.css
+++ b/src/components/wrapper/Wrapper.module.css
@@ -7,10 +7,6 @@
   margin-right: auto;
 }
 
-.section_ai_center {
-  align-items: center;
-}
-
 .container {
   flex-grow: 1;
   display: grid;
@@ -22,4 +18,14 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.ai_center {
+  align-items: center;
+}
+
+.type_grid {
+  gap: 0 60px;
+  display: grid;
+  grid-template-columns: 320px 1fr;
 }
