feature/настроить выход из приложения

--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -4,7 +4,16 @@
 }
 
 .link {
-  text-decoration: none;;
+  cursor: pointer;
+  border: 0;
+  background: none;
+  text-align: left;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: #fff;
+  transition: all .3s ease;
 }
 
 .footer {
