--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,10 +1,12 @@
 .item {
+  color: #fff;
   gap: 8px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   cursor: pointer;
+  text-decoration: none;
   transition: all .3s ease;
 }
 
