feature/создать компоненты для ленты заказов

--- a/src/components/order-details/OrderDetails.module.css
+++ b/src/components/order-details/OrderDetails.module.css
@@ -1,10 +1,12 @@
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
 }
 
-.id {
-  text-shadow: 0 4px 32px rgba(51, 51, 255, .50), 0 0 8px rgba(51, 51, 255, .25), 0 0 16px rgba(51, 51, 255, .25);
+.header {
+}
+
+.list {
+
+}
+
+.footer {
 }
