--- a/src/components/wrapper/Wrapper.module.css
+++ b/src/components/wrapper/Wrapper.module.css
@@ -14,6 +14,10 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
+.gcg_lg {
+  grid-column-gap: 60px;
+}
+
 .content {
   height: 100%;
   display: flex;
