--- a/src/components/feed-list/FeedList.module.css
+++ b/src/components/feed-list/FeedList.module.css
@@ -12,6 +12,12 @@
 }
 
 .section {
+  gap: 16px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 8px 0 0;
   position: absolute;
   left: 0;
   top: 0;
