--- a/src/components/order-card/OrderCard.module.css
+++ b/src/components/order-card/OrderCard.module.css
@@ -1,18 +1,79 @@
 .wrapper {
+  gap: 24px 0;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  padding: 24px;
+  border-radius: 40px;
+  background-color: #1C1C21;
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.04), 0 0 2px 0 rgba(0, 0, 0, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
 }
 
 .container {
-  flex-grow: 1;
-  overflow: auto;
-  position: relative;
-  margin: 0 -13px 0 0;
+  gap: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.section {
-  position: absolute;
-  left: 0;
+.list {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.picholder {
+  width: 64px;
+  height: 64px;
+  flex: 0 0 64px;
+  margin: 0 0 0 -16px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  border: 2px solid #801AB2;
+  background-color: #131316;
+}
+
+.picholder:first-child:before {
+  content: '';
   top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.picholder:last-child {
+  margin: 0;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.counter {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: absolute;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.picholder:first-child .counter {
+  display: flex;
+}
+
+.total {
+  gap: 0 8px;
+  display: flex;
+  align-items: center;
 }
