--- a/src/components/order-card/OrderCard.module.css
+++ b/src/components/order-card/OrderCard.module.css
@@ -15,6 +15,12 @@
   justify-content: space-between;
 }
 
+.header {
+  gap: 8px 0;
+  display: flex;
+  flex-direction: column;
+}
+
 .list {
   display: flex;
   align-items: center;
