--- a/src/components/feed-total/FeedTotal.module.css
+++ b/src/components/feed-total/FeedTotal.module.css
@@ -10,13 +10,13 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
-.section {
-}
-
 .list {
   margin: 0;
   padding: 0;
   list-style: none;
+  gap: 0 16px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .success {
