--- a/src/components/order-card/OrderCard.module.css
+++ b/src/components/order-card/OrderCard.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 24px;
+  cursor: pointer;
   border-radius: 40px;
   background-color: #1C1C21;
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.04), 0 0 2px 0 rgba(0, 0, 0, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
